--- a/YZImageDistinguishDemo/Info.plist
+++ b/YZImageDistinguishDemo/Info.plist
@@ -62,5 +62,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>使用相机</string>
 </dict>
 </plist>
